feat: synchronize google calendar events to local sqlite database (#1)
* test: use kotest for existing tests

* feat(google): add properties for google calendar

* feat(google): add task to synchronize google calendar events

* feat(google): fix native image build and add env vars

* feat(db): use Exposed to create Repositories and Tables to store Guests and Events